tests/ui/borrowck/borrowck-assign-to-constants.stderr
error[E0594]: cannot assign to immutable static item `foo`
  --> $DIR/borrowck-assign-to-constants.rs:5:5
   |
LL | static foo: isize = 5;
   | ----------------- this `static` cannot be written to
...
LL |     foo = 6;
   |     ^^^^^^^ cannot assign

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
